--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.6.0
 Django==4.2.1
 django-cors-headers==4.0.0
+django-taggit==4.0.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 numpy==1.24.3
